force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/tc9_imp__Import_Tool_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the Import Tool</description>
    <label>Import Tool Settings</label>
</CustomObject>