force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__API_Key__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__API_Key__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The API Key used to authenticate with the Jitterbit API.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The API Key used to authenticate with the Jitterbit API.</inlineHelpText>
    <label>API-Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>