force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__API_Load_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__API_Load_Type__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

Defines which API load type is to be used &apos;Batch&apos; or &apos;Bulk&apos;. If blank the default will be &apos;Bulk&apos;.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

Defines which API load type is to be used &apos;Batch&apos; or &apos;Bulk&apos;. If blank the default will be &apos;Bulk&apos;.</inlineHelpText>
    <label>API Load Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>