force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Check_for_Manual_Timesheet_Update__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Check_for_Manual_Timesheet_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, a trigger will run on the timesheet entry to ensure manually updated records do not get updated via the import process.</description>
    <inlineHelpText>If checked, a trigger will run on the timesheet entry to ensure manually updated records do not get updated via the import process.</inlineHelpText>
    <label>Check for Manual Timesheet Update</label>
    <type>Checkbox</type>
</CustomField>