force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Default_Invoice_Schedule__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Default_Invoice_Schedule__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The default invoice schedule external id value is mapped to the following field: tc9_pr__Schedule__r.tc9_imp__External_Id_it__c.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The default invoice schedule external id value is mapped to the following field: tc9_pr__Schedule__r.tc9_imp__External_Id_it__c.</inlineHelpText>
    <label>Default Invoice Schedule External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>