force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Default_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Default_Payment_Entity__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The default payment entity external id value is mapped to the following field: Account.tc9_imp__External_Id_it__c.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The default payment entity external id value is mapped to the following field: Account.tc9_imp__External_Id_it__c.
The default payment entity external id value mapped to the following field: Account.tc9_int__External_Id__c.</inlineHelpText>
    <label>Default Payment Entity External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>