force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Default_Timesheet_Calendar_External_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Default_Timesheet_Calendar_External_Id__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The default timesheet calendar external id value is mapped to the following field: tc9_pr__Calendar__r.tc9_imp__External_Id_it__c.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

The default timesheet calendar external id value is mapped to the following field: tc9_pr__Calendar__r.tc9_imp__External_Id_it__c.</inlineHelpText>
    <label>Default Timesheet Calendar External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>