force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Disable_Payee_ExtId_Validation__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Disable_Payee_ExtId_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable the validation rule that checks for special characters in the Payee External_Id_it__c field.</description>
    <inlineHelpText>This checkbox controls whether the &apos;External ID No Special Characters&apos; validation rule fires on the Payee External_Id_it__c field. When checked, the system will not enforce the rule that prevents special characters from being added.</inlineHelpText>
    <label>Disable Payee ExtId Validation</label>
    <type>Checkbox</type>
</CustomField>