force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__External_ID_Jobs_To_Run__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_ID_Jobs_To_Run__c</fullName>
    <description>Defines which scheduled jobs run to set the external id string when the ImportTool_ExternalIdController is invoked. Values are to be comma-separated. 

The following values are supported: 
Assignment
Payee
Payee Allowance
Payee Leave Rule
Project Code
Timesheet
Timesheet Entry</description>
    <inlineHelpText>Defines which scheduled jobs run to set the external id string when the ImportTool_ExternalIdController is invoked. Values are to be comma-separated. 

The following values are supported: 
Assignment
Payee
Payee Allowance
Payee Leave Rule
Project Code
Timesheet
Timesheet Entry</inlineHelpText>
    <label>External ID Jobs To Run</label>
    <length>255</length>
    <type>Text</type>
</CustomField>