force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__External_ID_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_ID_Payee__c</fullName>
    <description>The field defines the method to set the external ID string. Valid options are: &quot;From Contact External ID&quot; OR &quot;From Payee Name&quot;</description>
    <inlineHelpText>The field defines the method to set the external ID string. Valid options are: &quot;From Contact External ID&quot; OR &quot;From Payee Name&quot;</inlineHelpText>
    <label>External ID Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>