force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__External_ID_Payee_Allowance__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__External_ID_Payee_Allowance__c</fullName>
    <description>This field defines the method used to set the external ID string for the Payee Allowance object. 

Valid options are: 
- Payee and Name (Default)
- Payee Assignment and Name</description>
    <inlineHelpText>This field defines the method used to set the external ID string for the Payee Allowance object. 

Valid options are: 
- Payee and Name (Default)
- Payee Assignment and Name</inlineHelpText>
    <label>External ID Payee Allowance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>