force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Override_Pay_Multipliers__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Override_Pay_Multipliers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether pay rate multipliers will be overridden to 1 during Pay Transaction Import</description>
    <inlineHelpText>Indicates whether pay rate multipliers will be overridden to 1 during Pay Transaction Import</inlineHelpText>
    <label>Override Pay Multipliers?</label>
    <type>Checkbox</type>
</CustomField>