force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Package_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Package_Type__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. It can accept one of two specific values: &apos;Managed&apos; or &apos;Unmanaged&apos;.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. It can accept one of two specific values: &apos;Managed&apos; or &apos;Unmanaged&apos;.</inlineHelpText>
    <label>Package Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>