force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__Salesforce_Admin_Username__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__Salesforce_Admin_Username__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. This field is used to authenticate the external Salesforce admin user.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. This field is used to authenticate the external Salesforce admin user.</inlineHelpText>
    <label>Salesforce Admin Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>