force-app/main/default/objects/tc9_imp__Import_Tool_Settings__c/fields/tc9_imp__X1password_Vault_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_imp__X1password_Vault_Name__c</fullName>
    <description>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

Used to look up the Salesforce admin credentials via 1password API.</description>
    <inlineHelpText>This field is invoked when &apos;Override_Standard_Import_Process__c&apos; is set to true, indicating an override of the standard import process. 

Used to look up the Salesforce admin credentials via 1password API.</inlineHelpText>
    <label>1password Vault Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>